# PuppetString

./: .gitignore  CLAUDE.md  LICENSE  PHASE3_PLAN.md  PUPPETSTRING_PROJECT_PLAN.md  README.md  RESPONSIBLE_USE.md  pyproject.toml
.claude/Commands/: end-session.md  security-review.md  status.md
.github/workflows/: ci.yml
docs/: DEV_SETUP.md
examples/multi_agent_demo/: server.py
examples/vulnerable_agent/: agent.py  llm_agent.py
examples/vulnerable_mcp_server/: server.py
puppetstring/: __init__.py  __main__.py  cli.py  config.py
puppetstring/adapters/: __init__.py  agent_adapter.py  base.py  http_adapter.py  http_swarm_adapter.py  langchain_adapter.py  mcp_adapter.py  swarm_adapter.py
puppetstring/core/: __init__.py  llm_judge.py  models.py
puppetstring/modules/agent_swarm/: __init__.py  judge.py  models.py  module.py  payload_loader.py
puppetstring/modules/agent_swarm/payloads/: delegation_abuse.yaml  rogue_agent.yaml  shared_memory.yaml  trust_exploitation.yaml
puppetstring/modules/mcp_scanner/: __init__.py  checks.py  scanner.py
puppetstring/modules/owasp_audit/: __init__.py  engine.py  mapper.py  models.py  serializer.py
puppetstring/modules/prompt_injection/: __init__.py  document_generator.py  encoding.py  engine.py  judge.py  models.py  payload_generator.py  payload_loader.py
puppetstring/modules/prompt_injection/payloads/: document_injection.yaml  encoding_bypasses.yaml  tool_output_injection.yaml
puppetstring/modules/workflow_fuzzer/: __init__.py  fuzzer.py
puppetstring/modules/workflow_fuzzer/payloads/: boundary_test.yaml  chain_exploitation.yaml  memory_poison.yaml  tool_abuse.yaml
puppetstring/payloads/: __init__.py  loader.py  models.py
puppetstring/reporting/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py  remediation.py  report_generator.py  terminal.py
puppetstring/reporting/templates/: report.html.j2  report.md.j2
puppetstring/staging/: __init__.py  manager.py  models.py
puppetstring/utils/: constants.py  logging.py
scripts/: health_check.py
tests/: conftest.py  test_agent_adapter.py  test_cli.py  test_config.py  test_cut.py  test_dance.py  test_http_adapter.py  test_http_swarm_adapter.py  test_langchain_adapter.py  test_multi_agent_server.py  test_owasp_mapper.py  test_pull_fuzz.py  test_pull_scan.py  test_remediation.py  test_serializer.py  test_smoke.py  test_stage.py  test_swarm_attacks.py  test_swarm_delegation_rogue.py  test_tangle.py  test_unravel.py
